# btop--

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  install.ps1  install.sh
.github/workflows/: release.yml
agent/: CMakeLists.txt  README.md
agent/cmake/: Findnlohmann_json.cmake
agent/docs/: ARCHITECTURE_REFACTOR.md  DISTRIBUTED_MONITORING.md
agent/src/distributed/client/: daemon_logger.cpp  daemon_logger.hpp  daemon_manager.cpp  daemon_manager.hpp  distributed_config.cpp  distributed_config.hpp  main.cpp  metrics_collector.cpp  metrics_collector.hpp  network_client.cpp  network_client.hpp
agent/src/distributed/common/: auth_interface.cpp  auth_interface.hpp  config.hpp  config_parser.cpp  config_parser.hpp  metrics_data.cpp  metrics_data.hpp
control-plane/: .dockerignore  Dockerfile  README.md  docker-compose.yml
control-plane/backend/: .env.example  .gitignore  README.md  pyproject.toml
control-plane/backend/app/: bootstrap.py  db.py  deps.py  main.py  models.py  schemas.py
control-plane/backend/app/core/: config.py  security.py
control-plane/backend/app/routers/: agents.py  api_keys.py  auth.py  compat.py  dashboards.py  metrics.py  users.py
control-plane/deploy/: distributed-client.example.json  nginx.conf  start.sh
control-plane/docs/: DEPLOYMENT.md
control-plane/frontend/: index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
control-plane/frontend/src/: App.tsx  styles.css
control-plane/frontend/src/components/: MiniTrendChart.tsx  SimpleChart.tsx
control-plane/frontend/src/lib/: api.ts  dashboard.ts  format.ts  i18n.ts  types.ts
docs/: RELEASE_AUTOMATION.md
